[package]
name = "am-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.6", features = ["json", "tokio", "tracing", "ws"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
anyhow = { version = "1.0.100" }
tracing = { version = "0.1.41" }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
base64 = { version = "0.22.1" }
serde = { version = "1.0.228", features = ["derive"] }
headers = { version = "0.4.1" }

am-signal = { path = "../am-signal" }