[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"], default-features = false }
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "chrono", "runtime-tokio", "macros", "derive", "rust_decimal", "sqlx-postgres", "time"], default-features = false }
anyhow = "1.0.100"
tracing = "0.1.41"
