[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
logging = { path = "../logging", optional = true }
server = { path = "../server", optional = true }
signal = { path = "../signal", optional = true }
locks = { path = "../locks", optional = true }
database = { path = "../database", optional = true }
currency = { path = "../currency", optional = true }

[features]
default = []

logging = ["dep:logging"]
server = ["dep:server"]
signal = ["dep:signal"]
locks = ["dep:locks"]
database = ["dep:database"]
currency = ["dep:currency"]

currency-sqlx = [
  "currency",
  "currency/sqlx",
]

currency-full = [
  "currency-sqlx"
]

full = [
  "logging",
  "server",
  "signal",
  "locks",
  "database",
  "currency",
]