[package]
name = "locks"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres"], default-features = false }
anyhow = { version = "1.0.100", default-features = false }
tokio = { version = "1.47.1", features = ["time", "sync"], default-features = false }
tracing = { version = "0.1.41", default-features = false }