[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", default-features = false }
axum = { version = "0.8.6", features = ["json", "tokio", "tracing", "ws", "http1", "http2"], default-features = false }
axum-extra = { version = "0.10.3", features = ["typed-header"], default-features = false }
anyhow = { version = "1.0.100" }
tracing = { version = "0.1.41", default-features = false }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto", "use_pem"], default-features = false }
base64 = { version = "0.22.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
headers = { version = "0.4.1", default-features = false }

signal = { path = "../signal" }